<resources>
    <string name="app_name">Clase03</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_agregar">Agregar</string>
    <string name="lbl_marca">Marca</string>
    <string name="lbl_modelo">Modelo</string>
    <string name="lbl_color">Color</string>
    <string name="lbl_iniciar_sesion">Iniciar Sesión</string>
    <string name="lbl_registrar">Registrar Ahora</string>
    <string name="lbl_contrasena">Contraseña</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_masculino">Masculino</string>
    <string name="lbl_femenino">Femenino</string>
    <string name="lbl_rep_contrasena">Repetir Contraseñ</string>
    <string name="lbl_administrador">Administrador</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
